<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ImageButton for Image Upload -->
    <ImageButton
        android:id="@+id/btnChoseImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="fitCenter"
        android:src="@drawable/add_image"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/add_image" />

    <!-- EditText for Image Name -->
    <EditText
        android:id="@+id/editTextImageName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/enter_image_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnChoseImage"
        android:autofillHints="none" />

    <!-- Button for Uploading to Storage -->
    <Button
        android:id="@+id/btnUploadToStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/upload_to_storage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextImageName" />

    <!-- Progress Bar for Upload Status -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/btnUploadToStorage"
        app:layout_constraintStart_toStartOf="@id/btnUploadToStorage"
        app:layout_constraintTop_toBottomOf="@id/btnUploadToStorage" />

    <!-- Text View for Loading Text -->
    <TextView
        android:id="@+id/textLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_image"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>
